# ur5e-rt-controller

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  PLAN.md  README.md  RT_OPTIMIZATION.md  build.sh  install.sh  package.xml  planning_rt.md  planning_sim.md
.github/: .ci-test
.github/workflows/: ros2-advanced-ci.yml
config/: hand_udp_receiver.yaml  mujoco_simulator.yaml
docs/: CHANGELOG.md  CORE_ALLOCATION_PLAN.md  PLAN.md  RT_OPTIMIZATION.md  WORKSPACE_ANALYSIS.md
include/ur5e_rt_controller/: data_logger.hpp  hand_udp_receiver.hpp  hand_udp_sender.hpp  mujoco_simulator.hpp  rt_controller_interface.hpp  thread_config.hpp
include/ur5e_rt_controller/controllers/: operational_space_controller.hpp  p_controller.hpp  pd_controller.hpp
launch/: hand_udp.launch.py  mujoco_sim.launch.py  ur_control.launch.py
scripts/: hand_udp_sender_example.py  monitor_data_health.py  plot_ur_trajectory.py
src/: custom_controller.cpp  hand_udp_receiver_node.cpp  hand_udp_sender_node.cpp  mujoco_simulator_node.cpp
src/ur5e_hand_udp/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/ur5e_hand_udp/include/ur5e_hand_udp/: hand_udp_receiver.hpp  hand_udp_sender.hpp
src/ur5e_hand_udp/launch/: hand_udp.launch.py
src/ur5e_hand_udp/src/: hand_udp_receiver_node.cpp  hand_udp_sender_node.cpp
src/ur5e_mujoco_sim/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/ur5e_mujoco_sim/include/ur5e_mujoco_sim/: mujoco_simulator.hpp
src/ur5e_mujoco_sim/launch/: mujoco_sim.launch.py
src/ur5e_mujoco_sim/models/ur5e/: scene.xml  ur5e.xml
src/ur5e_mujoco_sim/src/: mujoco_sim_loop.cpp  mujoco_simulator.cpp  mujoco_simulator_node.cpp  mujoco_viewer.cpp
src/ur5e_rt_base/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/ur5e_rt_base/include/ur5e_rt_base/: data_logger.hpp  log_buffer.hpp  thread_config.hpp  thread_utils.hpp  types.hpp
src/ur5e_rt_controller/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/ur5e_rt_controller/config/: ur5e_rt_controller.yaml
src/ur5e_rt_controller/include/ur5e_rt_controller/: controller_timing_profiler.hpp  rt_controller_interface.hpp
src/ur5e_rt_controller/include/ur5e_rt_controller/controllers/: clik_controller.hpp  p_controller.hpp  pd_controller.hpp  pinocchio_controller.hpp
src/ur5e_rt_controller/launch/: ur_control.launch.py
src/ur5e_rt_controller/src/: custom_controller.cpp
src/ur5e_tools/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/ur5e_tools/scripts/: motion_editor_gui.py
ur5e_description/: CMakeLists.txt  README.md  package.xml
ur5e_hand_udp/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml
ur5e_hand_udp/include/ur5e_hand_udp/: hand_udp_receiver.hpp
ur5e_hand_udp/src/: hand_udp_receiver.cpp  hand_udp_sender.cpp
ur5e_mujoco_sim/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml
ur5e_mujoco_sim/config/: mujoco_simulator.yaml
ur5e_mujoco_sim/launch/: mujoco_sim.launch.py
ur5e_mujoco_sim/src/: mujoco_sim_loop.cpp  mujoco_simulator_node.cpp  mujoco_viewer.cpp
ur5e_rt_base/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml
ur5e_rt_base/include/ur5e_rt_base/: data_logger.hpp  thread_config.hpp  thread_utils.hpp
ur5e_rt_base/include/ur5e_rt_base/filters/: bessel_filter.hpp
ur5e_rt_controller/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  package.xml
ur5e_rt_controller/config/: ur5e_rt_controller.yaml
ur5e_rt_controller/include/ur5e_rt_controller/controllers/: clik_controller.hpp  operational_space_controller.hpp  pd_controller.hpp  pinocchio_controller.hpp
ur5e_rt_controller/launch/: ur_control.launch.py
ur5e_rt_controller/src/: custom_controller.cpp  pd_controller.cpp
ur5e_tools/: CHANGELOG.md  CLAUDE.md  README.md  package.xml  setup.py
ur5e_tools/scripts/: monitor_data_health.py
